--- a/webui/assets/jdd.css
+++ b/webui/assets/jdd.css
@@ -23,6 +23,21 @@ body {
     min-height: 15em;
 }
 
+.job_name_select {
+    width: 75%;
+}
+
+.date_range_select {
+    width: 25%;
+}
+
+.options_container {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    padding: 10px;
+}
+
 #footer {
     width: 100%;
     height: 4em;
