--- a/webui/assets/jdd.css
+++ b/webui/assets/jdd.css
@@ -4,14 +4,14 @@ body {
 
 h1 {
     background-color: #69DAFF;
-    color: #005271;
+    color: #00408a;
     border-radius: 10px 10px 0px 0px;
     padding: 5px;
     margin-bottom: 0px;
 }
 
 #header {
-    background-color: #005271;
+    background-color: #00408a;
     width: 100%;
     min-height: 2.5em;
     display: flex;
@@ -21,7 +21,7 @@ h1 {
 
 #header a {
     background-color: #69DAFF;
-    color: #005271;
+    color: #00408a;
     text-decoration: none;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     border-radius: 5px;
@@ -39,7 +39,7 @@ h1 {
 
 #header a:hover {
     background-color: #F69333;
-    color: #994700;
+    color: #00408a;
 }
 
 #page-content {
